<?xml version="1.0"?>
<package>
  <name>mofpy</name>
  <version>0.1.0</version>
  <description>mofpy package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>


  <author>Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
</package>
